logs/jsam.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/jsam'...
Compiling './lib/python3.5/site-packages/jsam/collection.py'...
***   File "./lib/python3.5/site-packages/jsam/collection.py", line 328
    print aaa.nodes
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/jsam/filecollection.py'...
***   File "./lib/python3.5/site-packages/jsam/filecollection.py", line 97
    print " ".join(cmd), '=>', " ".join(new)
            ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jsam/jsdbi.py'...
***   File "./lib/python3.5/site-packages/jsam/jsdbi.py", line 88
    print "stmt:", stmt
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/jsam/jsonsql.py'...
***   File "./lib/python3.5/site-packages/jsam/jsonsql.py", line 351
    print "retrieve_query:", query, query_args
                          ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/jsam/jsonsqlcheck.py'...
***   File "./lib/python3.5/site-packages/jsam/jsonsqlcheck.py", line 70
    print "root node", node.id, "id", node.id, "lleft", node.lleft
                    ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/jsam/jsonsqlxpath.py'...
***   File "./lib/python3.5/site-packages/jsam/jsonsqlxpath.py", line 333
    print results
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/jsam/jsurl.py'...
***   File "./lib/python3.5/site-packages/jsam/jsurl.py", line 117
    print ">", url
            ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/jsam/mysql_jsam.py'...
***   File "./lib/python3.5/site-packages/jsam/mysql_jsam.py", line 82
    except MySQLdb.OperationalError, e:
                                   ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jsam/p4j.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (p4j.py, line 210)
Compiling './lib/python3.5/site-packages/jsam/pathutil.py'...
***   File "./lib/python3.5/site-packages/jsam/pathutil.py", line 62
    print path_get(obj, ["farmers", "old macdonald", "cow" ])
                 ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jsam/pgsql_jsam.py'...
***   File "./lib/python3.5/site-packages/jsam/pgsql_jsam.py", line 84
    except psycopg2.ProgrammingError, e:
                                    ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jsam/srcctrl.py'...
***   File "./lib/python3.5/site-packages/jsam/srcctrl.py", line 62
    print cmdname, cmd, ret
                ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/jsam/xparse.py'...
***   File "./lib/python3.5/site-packages/jsam/xparse.py", line 371
    raise SyntaxError(res[0], "unexpected token "+`res`)
                                                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/jsam/yapps2.py'...
***   File "./lib/python3.5/site-packages/jsam/yapps2.py", line 51
    print 'Warning: token', n, 'multiply defined.'
                         ^
SyntaxError: Missing parentheses in call to 'print'

Compiling './lib/python3.5/site-packages/jsam/yappsrt.py'...
*** Sorry: TabError: inconsistent use of tabs and spaces in indentation (yappsrt.py, line 12)
Listing './lib/python3.5/site-packages/jsam-0.7.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
